@@ -20,6 +20,8 @@ production.
 === New features in 1.28 ===
 * User::isBot() method for checking if an account is a bot role account.
 * Added a new hook, 'UserIsBot', to aid in determining if a user is a bot.
+* Added a new hook, 'ApiMakeParserOptions', to allow extensions to better
+  interact with API parsing.
 
 === External library changes in 1.28 ===
 
@@ -35,6 +37,8 @@ production.
 === Action API changes in 1.28 ===
 
 === Action API internal changes in 1.28 ===
+* Added a new hook, 'ApiMakeParserOptions', to allow extensions to better
+  interact with ApiParse and ApiExpandTemplates.
 
 === Languages updated in 1.28 ===
 
